# conclaude

./: .conclaude.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  MASCOT_IMPLEMENTATION.md  README.md  REPORT-C.md  REPORT.md  cliff.toml  conclaude-schema.json  dist-workspace.toml  flake.nix  plan-dist-manifest.json
.claude/: settings.json
.claude/agents/: coder.md  stuck.md  tester.md
.claude/commands/spectr/: sync.md
.claude/skills/generate-docs/: SKILL.md
.claude/skills/generate-schema/: SKILL.md
.claude/skills/spectr-accept-wo-spectr-bin/: SKILL.md
.claude/skills/spectr-validate-wo-spectr-bin/: SKILL.md
.github/workflows/: ci.yml
docs/: MANUAL_TEST_INSTRUCTIONS.md  README.md  STAR_WARP_EXECUTIVE_SUMMARY.md  STAR_WARP_TEST_REPORT.md  TECHNICAL_VERIFICATION.md  astro.config.mjs  package-lock.json  package.json
docs/scripts/: sync-changelog.mjs
docs/src/: content.config.ts
docs/src/assets/: README.md
docs/src/styles/: custom.css
scripts/: download-mascot.sh  download-ts-sdk.rs
spectr/: AGENTS.md
spectr/changes/add-agent-aware-file-protection/: tasks.md
spectr/changes/add-agent-field-to-tool-usage-validation/: proposal.md  tasks.jsonc  tasks.md
spectr/changes/add-agent-frontmatter-hooks/: tasks.md
spectr/changes/add-agent-session-file-config/: proposal.md  tasks.md
spectr/changes/add-init-hook-timeout/: tasks.md
src/: config.rs  config_test.rs  default-config.yaml  gitignore.rs  hooks.rs  hooks_tests.rs  lib.rs  main.rs  rg_search.rs  schema.rs  types.rs
tests/: agent_hooks_tests.rs  config_tests.rs  hooks_tests.rs  integration_tests.rs  output_limiting_tests.rs  show_command_tests.rs  skill_hooks_tests.rs  types_tests.rs
wix/: main.wxs
(+165 files in other folders)
