[workspace]
members = [".", "crates/conclaude-field-derive"]

[package]
name = "conclaude"
version = "0.2.9"
edition = "2021"
description = "Claude Code hook handler CLI tool that processes hook events and manages lifecycle hooks for tool usage, session management, and transcript processing"
license = "MIT"
authors = ["Conner Ohnesorge"]
repository = "https://github.com/connerohnesorge/conclaude"
keywords = ["claude-code", "hooks", "cli", "ai", "automation"]
default-run = "conclaude"

[package.metadata.wix]
upgrade-guid = "9AF570DA-8336-405C-A402-9B76ECDD4C3E"
path-guid = "5D54B933-97E1-4A8E-AD21-A67167B1FDAD"
license = false
eula = false

[[bin]]
name = "conclaude"
path = "src/main.rs"

[[bin]]
name = "generate-schema"
path = "src/bin/generate-schema.rs"

[[bin]]
name = "generate-docs"
path = "src/bin/generate-docs.rs"

[[bin]]
name = "download-ts-sdk"
path = "src/bin/download-ts-sdk.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
conclaude-field-derive = { path = "crates/conclaude-field-derive" }
dirs = "5.0"
flate2 = "1.0"
glob = "0.3"
ignore = "0.4"
notify-rust = "4.10"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tar = "0.4"
tempfile = "3.8"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.8"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
